Chang the title

--- a/_posts/2019-05-25-Bonding.md
+++ b/_posts/2019-05-25-Bonding.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      Let's compose the templates!
-subtitle:   This is a report about the training of the NSpM model.
+title:      Bonding
+subtitle:   Let's compose the templates!
 date:       2019-05-26
 author:     Stuart Chen
 header-img: img/ivana-cajina-343416-unsplash.jpg
