update image addresses

--- a/_posts/2019-05-25-Week-1.md
+++ b/_posts/2019-05-25-Week-1.md
@@ -5,6 +5,7 @@ subtitle:   Let's firstly set up the evaluation measure!
 date:       2019-06-01
 author:     Stuart Chen
 header-img: img/ivana-cajina-343416-unsplash.jpg
+typo a-root-url: ..
 catalog: true
 tags:
     - GSoC2019
@@ -41,6 +42,7 @@ When talking the question, those natural language queries, it highlights the imp
 ## Entity Recognition & Semantic Parsing
 
 To illustrate the ideas, I would hope to show you this figure that was extracted from the data below:
+
         {
                                 "id": "3",
                                 "answertype": "resource",
@@ -70,8 +72,10 @@ To illustrate the ideas, I would hope to show you this figure that was extracted
                                                                 "value": "http://dbpedia.org/resource/Mary_Todd_Lincoln"
                                                         }
 
-![alt text](https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/tree.png "Semantic Tree")
-![alt text](https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/semantic_parser.PNG "Semantic Parsing")
+
+![tree]( https://github.com/StuartCHAN/StuartCHAN.github.io/tree/master/img/img/tree.png )
+
+![semantic_parser]( https://github.com/StuartCHAN/StuartCHAN.github.io/tree/master/img/img/semantic_parser.PNG )
 
 
 This show the idelogical processing about how we detect the entities from the sentence and do the parsing, because we need to mapp them towards the RDF in DBpedia. 
