--- a/_posts/2019-06-02-Week-1.md
+++ b/_posts/2019-06-02-Week-1.md
@@ -73,9 +73,9 @@ To illustrate the ideas, I would hope to show you this figure that was extracted
                                                         }
 
 
-![tree]( https://github.com/StuartCHAN/StuartCHAN.github.io/tree/master/img/img/tree.png )
+![tree]( https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/tree.PNG )
 
-![semantic_parser]( https://github.com/StuartCHAN/StuartCHAN.github.io/tree/master/img/img/semantic_parser.PNG )
+![semantic_parser]( https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/semantic_parser.PNG )
 
 
 This show the idelogical processing about how we detect the entities from the sentence and do the parsing, because we need to mapp them towards the RDF in DBpedia. 
