--- a/_posts/2019-06-09-Week-2.md
+++ b/_posts/2019-06-09-Week-2.md
@@ -67,7 +67,7 @@ The question should be parsed to get the synthetic structure by:
  ('?', '.')]
 ```
 then we get the semantic tree like:
-![](assets/Audrey_tree1.PNG)
+![Audrey_tree1](assets/Audrey_tree1.PNG)
 ```json
 ('Which movie does <A> star ?', ['Person'])
 ```
@@ -77,7 +77,7 @@ then we get the semantic tree like:
 
 ### 2.1 Query Template
 Then, based on the work in the last step, we construct the semantic structure for the query template:
-![](assets/Audrey_tree2.PNG)
+![Audrey_tree2](assets/Audrey_tree2.PNG)
 
 And then, with the help of matching the regex of the question, 
 ```python
