update to fix the visibility

--- a/_posts/2019-06-02-Week-1.md
+++ b/_posts/2019-06-02-Week-1.md
@@ -30,7 +30,7 @@ For Method 1, the basic idea was that, based on the two files that I committed t
 It works on two parts parallel:
 
         1)first, in the evaluation.sh , it calls the NSpM model to give the output based on trained model;
-
+    
         2)next, it retrieve the comparative output from the GERBIL to do the evaluation. The evaluation is conducted upon the data file after generation operation.  
 
 For Method 2, it is that the GERBIL needs to wrap the whole self-built QA system that's written in python into the [existed system](https://github.com/dice-group/GerbilQA-Benchmarking-Template/blob/master/src/main/java/org/dice/qa/impl/ExampleQASystem.java) that's written in java via jython. And I was adviced that this would be more straightforward to spares us from implementing the evaluation module of our own.
@@ -43,6 +43,7 @@ When talking the question, those natural language queries, it highlights the imp
 
 To illustrate the ideas, I would hope to show you this figure that was extracted from the data below:
 
+```json
         {
                                 "id": "3",
                                 "answertype": "resource",
@@ -71,11 +72,12 @@ To illustrate the ideas, I would hope to show you this figure that was extracted
                                                                 "type": "uri",
                                                                 "value": "http://dbpedia.org/resource/Mary_Todd_Lincoln"
                                                         }
+```
 
 
-![tree]( https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/tree.PNG )
+![](https://pic1.zhimg.com/80/v2-c9e0a1948e0e405081513620172f94f0_hd.jpg)
 
-![semantic_parser]( https://github.com/StuartCHAN/StuartCHAN.github.io/blob/master/img/semantic_parser.PNG )
+![](https://pic3.zhimg.com/80/v2-bf0e8dcbe4a0a7804196c8fcfc055c62_hd.png)
 
 
 This show the idelogical processing about how we detect the entities from the sentence and do the parsing, because we need to mapp them towards the RDF in DBpedia. 
