--- a/_posts/2019-06-09-Week-2.md
+++ b/_posts/2019-06-09-Week-2.md
@@ -67,7 +67,7 @@ The question should be parsed to get the synthetic structure by:
  ('?', '.')]
 ```
 then we get the semantic tree like:
-![Audrey_tree1](assets/Audrey_tree1.PNG)
+![Audrey_tree1](https://pic2.zhimg.com/80/v2-56675bcbf18f06a3fd2ee116c87a5381_hd.png)
 ```json
 ('Which movie does <A> star ?', ['Person'])
 ```
@@ -77,7 +77,7 @@ then we get the semantic tree like:
 
 ### 2.1 Query Template
 Then, based on the work in the last step, we construct the semantic structure for the query template:
-![Audrey_tree2](assets/Audrey_tree2.PNG)
+![Audrey_tree2](https://pic1.zhimg.com/80/v2-740e8b38b75543e8584305caeca2cb38_hd.jpg)
 
 And then, with the help of matching the regex of the question, 
 ```python
