--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -59,13 +59,16 @@ Case 3: Issue On Reproducibility
 
 
 Summing Up:
+
 	The current neural SPARQL machine would be having a strong 	
 	dependency on the vocabulary that it have learned.
 	Also, the present version of the model design has mostly focused on 
 	the fitting of neural machine translation between the  natural 
 	language questions and the SPARQL queries.
 
+
 ### 1.2 Expanding The Question:
+
 	So, what should we do next?
 
 I got some feedback from the researches in NL2SQL that major in deploying reinforcement learning method in training the neural model to get more and more correctness in the returned answers.
@@ -80,7 +83,9 @@ While parallelly, the researches in NL2SQL have a comparative stronger emphasis 
 
 That's to say, their models tend to build a more direct function from the natural language question through the generation of the structured query finally towards the return answer, based on which this type of algorithms of reinforcement learning get the reward upon the right or wrong of the result of the generated query then learning to let the query generator get the more and more pertinent returned answer. 
 
-	To sum up, the machine translation based-model is query-driven while 	 the reinforcement learning model that tries to take a step further 	can be classified as a final-answer-driven method.
+> To sum up, the machine translation based-model is query-driven while 	 the reinforcement 
+> learning model that tries to take a step further 	can be classified as a final-answer-driven 
+> method.
 
 However, in this type of final-answer-driven models, there's a pre-requisite that requires to embed the natural language questions, the structured query, and the answers entities into a calculable form while working with our problem.
 
@@ -108,6 +113,7 @@ There are two aspects to be paid attention:
 
 After the attempts in training a new vector set on the given templates, I figured out that it might be of more efficiency employing the DBpedia embedding vector of the [previous projects](https://github.com/dbpedia/embeddings).
 
+
 ##  References
 
 [1] [Victor Zhong, Caiming Xiong, Richard Socher](https://paperswithcode.com/paper/seq2sql-generating-structured-queries-from)  (2017) SEQ2SQL: GENERATING STRUCTURED QUERIES
@@ -115,3 +121,4 @@ FROM NATURAL LANGUAGE USING REINFORCEMENT
 LEARNING
 
 [2] [Chen Liang](https://arxiv.org/search/cs?searchtype=author&query=Liang%2C+C), [Mohammad Norouzi](https://arxiv.org/search/cs?searchtype=author&query=Norouzi%2C+M), [Jonathan Berant](https://arxiv.org/search/cs?searchtype=author&query=Berant%2C+J), [Quoc Le](https://arxiv.org/search/cs?searchtype=author&query=Le%2C+Q), [Ni Lao](https://arxiv.org/search/cs?searchtype=author&query=Lao%2C+N) (2018) Memory Augmented Policy Optimization for Program Synthesis and Semantic Parsing
+
