Elaborating on Week5

--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -39,8 +39,9 @@ Case 1: Entities Ambiguation
 	For example,
 	when the NSpM model took an input natural question that contains
 	"region",
-	the model referred it to the "dbr:wineRegion" that it had only
-	learned,
+	the model referred it to 
+	the "dbr:wineRegion" 
+	that it had only learned about the word similar to "region",
 	which might be biased and divergent to the original sense.
 
 Case 2: The Abused Mapping
@@ -51,11 +52,30 @@ Case 2: The Abused Mapping
 	another vocabulary that it had learned, then mismatching to the 
 	value of the replaced vocabulary.
 
+	For example, 
+	if we use the model trained on dbo:Monument templates set 
+	to infer the questions of the topic about location that contains the vocabulary 
+	that it had not learned in the training data, like:
+	the "rdf:type dbo:Place" and the "dbo:location" are the two of the most frequently abused in the inference
+	for those vocabulary unprecedented.
+
 Case 3: Issue On Reproducibility
 
 	The models that have attained BLEU could have not perfectly 
 	translated the natural language questions with a new different 
 	vocabulary into the correct query.
+
+	For example,
+	I picked out some of the questions in the training set as 
+	input to the trained model to test whether it can reproduce 
+	the queries that are paired to these original question in the training set,
+	like:
+	"whom did xu fan marry?",
+	the generated result was "select distinct var_uri where brack_open dbr_Rugrats dbo_composer var_uri",
+	where apparently the "dbr_Rugrats" and "dbo_composer" are not related to the question,
+	and the crucial entity about the person named "Xu Fan" and the entity ["dbr_Xu_Fan"](http://live.dbpedia.org/page/Xu_Fan) has not been properly recognized,
+	not matching to the correct paired query "select distinct var_uri where brack_open var_uri dbo_spouse dbr_Xu_Fan sep_dot brack_close" in the training set.
+
 
 
 Summing Up:
@@ -73,9 +93,26 @@ Summing Up:
 
 I got some feedback from the researches in NL2SQL that major in deploying reinforcement learning method in training the neural model to get more and more correctness in the returned answers.
 
-![Figure 1, SEQ2SQL(V Zhong et al.)](https://pic2.zhimg.com/80/v2-c45ddc6df9f5165326d871dcf7f31959_hd.jpg)
+![Figure 1, SEQ2SQL(V Zhong et al.)](https://pbs.twimg.com/media/D-ljAtsUcAAqQ4Y.jpg)
+Figure 1, SEQ2SQL(V Zhong et al.) [1]
 
-​																		Figure 1, SEQ2SQL(V Zhong et al.)
+To elaborate on this direction of researches, the paper MAPO (Memory Augmented Policy Optimization for Program Synthesis and Semantic Parsing) [2] on NIPS 2018 is worthy of our attention.
+
+MAPO is a method based on weakly supervised and intensive learning. In the paper, it transforms the NL2SQL task into an intensive learning task based on the basic composition of the NL2SQL task and the basic elements of reinforcement learning. In MAPO, the state of reinforcement learning x is seen as the natural language problem of input and its corresponding environment (e.g. an interpreter, or an knowledge graph or, typically in the experiment in the paper, a database), and the action space A of reinforcement learning is regarded as all possible collections of programs under the current natural language problem. And each action sequence a of the enhanced learning trajectory corresponds to every possible program.
+
+It can be seen that the key to the algorithm is the training of the strategy function. In MAPO, the author uses a seq2seq model to fit the strategy function, and training for the strategy function is equivalent to training the seq2seq model.
+
+It is worth noting that in reinforcement learning, the parameter update of the strategy function is different from the deep neural network, not based on the loss function, but based on the expected return. The parameter update is in the direction of maximizing the expected return. The expected return can be given by the Reward function.
+
+Since our task is to generate program statements, we can easily run the generated program in the real environment and compare the result with the label of the weakly supervised training data to get the 0-1 binary return function. The core idea of ??reinforcement learning is to correct the behavior of the agent by interacting with the environment, so as to achieve the effect of "learning".
+
+Based on the above-mentioned intensive learning ideas, in the specific implementation, MAPO proposed the following innovative solutions. First, in order to improve the efficiency of training, the MAPO algorithm stores the sampled high-reward program into a Memory Buffer. When training the strategy function fitting network, the objective function that maximizes the expected return is divided into two parts, one is The expected return of the sampling program in the Memory Buffer, and the other part is the expected return of the sampling program outside the Buffer, as shown in the following figure.
+
+![MAPO,NIPS2018](https://pbs.twimg.com/media/D-luC0sVAAEQ9i_.png)
+Figure 2, MAPO(NIPS 2018) [2]
+
+The team[2] applied MAPO to the [WikiSQL dataset](https://github.com/salesforce/WikiSQL). For each sample on the WikiSQL data, 1000 sample programs were generated. Five high-return samples were stored in the Memory Buffer. GloVe embeddings was applied to the strategy function fitting network. LSTM Hidden The unit is 200 and the training is 15000 steps:
+![Figure 3, is the figure 2 from MAPO about its performances and experiments](https://pbs.twimg.com/media/D-lxATuU4AA29Sy.png)
 
 The learning of the connection between the the natural language question and the structured query is the major objective function, where the  task is designed to let the query fit as much as possible during the machine translation training. 
 
@@ -103,7 +140,9 @@ There are two aspects to be paid attention:
 >    1) Uniqueness and Directivity: The embedding vector must be unique in terms of 
 >      representing the entities, otherwise there could be conflicting mapping. And it must be 
 >      promising that, in the vector space, each entity-vector pair must be correctly matched in 
->      one unique key-value pair.       
+>      one unique key-value pair. 
+
+* For example, the vocabulary "brack_close" was duplicated in the generated data file in the training data set on the topic about "place_v2".      
 
 >    2) Comprehensive Inclusion: The vector set should, comprehensively and accurately, 
 >    comprise all the entities and relation properties in the DBpedia space, with inclusion in the 
