--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -52,7 +52,7 @@ Case 2: The Abused Mapping
 	another vocabulary that it had learned, then mismatching to the 
 	value of the replaced vocabulary.
 
-For example, 
+* For example, 
 if we use the model trained on dbo:Monument templates set 
 to infer the questions of the topic about location that contains the vocabulary 
 that it had not learned in the training data, like:
@@ -65,13 +65,14 @@ Case 3: Issue On Reproducibility
 	translated the natural language questions with a new different 
 	vocabulary into the correct query.
 
-For example,
-I picked out some of the questions in the training set as 
+* For example,
+I picked out some of the questions in the training set as
 input to the trained model to test whether it can reproduce 
 the queries that are paired to these original question in the training set,
 like:
-"whom did xu fan marry?",
-the generated result was "select distinct var_uri where brack_open dbr_Rugrats dbo_composer var_uri",
+> "whom did xu fan marry?",
+the generated result was 
+> "select distinct var_uri where brack_open dbr_Rugrats dbo_composer var_uri",
 where apparently the "dbr_Rugrats" and "dbo_composer" are not related to the question,
 and the crucial entity about the person named "Xu Fan" and the entity ["dbr_Xu_Fan"](http://live.dbpedia.org/page/Xu_Fan) has not been properly recognized,
 not matching to the correct paired query "select distinct var_uri where brack_open var_uri dbo_spouse dbr_Xu_Fan sep_dot brack_close" in the training set.
@@ -111,10 +112,10 @@ Based on the above-mentioned intensive learning ideas, in the specific implement
 ![MAPO,NIPS2018](https://pbs.twimg.com/media/D-luC0sVAAEQ9i_.png)
 Figure 2, MAPO(NIPS 2018) [2]
 
-The team[2] applied MAPO to the [WikiSQL dataset](https://github.com/salesforce/WikiSQL). For each sample on the WikiSQL data, 1000 sample programs were generated. Five high-return samples were stored in the Memory Buffer. GloVe embeddings was applied to the strategy function fitting network. LSTM Hidden The unit is 200 and the training is 15000 steps:
+The team[2] applied MAPO to the [WikiSQL dataset](https://github.com/salesforce/WikiSQL). For each sample on the WikiSQL data, 1000 sample programs were generated. Five high-return samples were stored in the Memory Buffer. The [GloVe embeddings](https://nlp.stanford.edu/projects/glove/) was applied to the strategy function fitting network. LSTM Hidden The unit is 200 and the training is 15000 steps:
 ![Figure 3, is the figure 2 from MAPO about its performances and experiments](https://pbs.twimg.com/media/D-lxATuU4AA29Sy.png)
 
-The learning of the connection between the the natural language question and the structured query is the major objective function, where the  task is designed to let the query fit as much as possible during the machine translation training. 
+The learning of the connection between the the natural language question and the structured query is the major objective function, where the task is designed to let the query fit as much as possible during the machine translation training. 
 
 While parallelly, the researches in NL2SQL have a comparative stronger emphasis on the result that the generated query would return and on the correctness that it would produce, because the correct return of the query is their only goal, not the matching similarity of the queries. 
 
