--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -70,11 +70,15 @@ I picked out some of the questions in the training set as
 input to the trained model to test whether it can reproduce 
 the queries that are paired to these original question in the training set,
 like:
+
 > "whom did xu fan marry?",
+
 the generated result was 
+
 > "select distinct var_uri where brack_open dbr_Rugrats dbo_composer var_uri",
+
 where apparently the "dbr_Rugrats" and "dbo_composer" are not related to the question,
-and the crucial entity about the person named "Xu Fan" and the entity ["dbr_Xu_Fan"](http://live.dbpedia.org/page/Xu_Fan) has not been properly recognized,
+also, the crucial entity about the person named "Xu Fan" and the entity ["dbr_Xu_Fan"](http://live.dbpedia.org/page/Xu_Fan) has not been properly recognized,
 not matching to the correct paired query "select distinct var_uri where brack_open var_uri dbo_spouse dbr_Xu_Fan sep_dot brack_close" in the training set.
 
 
