--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -144,14 +144,16 @@ So, how could we remove the limitation away from the current model?
 There are two aspects to be paid attention:
 
 
->    1) Uniqueness and Directivity: The embedding vector must be unique in terms of 
+>    1) Uniqueness and Directivity: 
+>	   The embedding vector must be unique in terms of 
 >      representing the entities, otherwise there could be conflicting mapping. And it must be 
 >      promising that, in the vector space, each entity-vector pair must be correctly matched in 
 >      one unique key-value pair. 
 
 * For example, the vocabulary "brack_close" was duplicated in the generated data file in the training data set on the topic about "place_v2".      
 
->    2) Comprehensive Inclusion: The vector set should, comprehensively and accurately, 
+>    2) Comprehensive Inclusion: 
+>	 The vector set should, comprehensively and accurately, 
 >    comprise all the entities and relation properties in the DBpedia space, with inclusion in the 
 >    embedding of the keywords of the query grammars, e.g. "SELECT","DISTINCT","WHERE".etc.
 
