--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -81,7 +81,8 @@ the generated result was
 
 where apparently the "dbr_Rugrats" and "dbo_composer" are not related to the question,
 also, the crucial entity about the person named "Xu Fan" and the entity ["dbr_Xu_Fan"](http://live.dbpedia.org/page/Xu_Fan) has not been properly recognized,
-not matching to the correct paired query "select distinct var_uri where brack_open var_uri dbo_spouse dbr_Xu_Fan sep_dot brack_close" in the training set.
+not matching to the correct paired query 
+> "select distinct var_uri where brack_open var_uri dbo_spouse dbr_Xu_Fan sep_dot brack_close" in the training set.
 
 
 
