--- a/_posts/2019-06-23-Week-4.md
+++ b/_posts/2019-06-23-Week-4.md
@@ -88,4 +88,5 @@ This might help in two problems:
 >    1) the restrictedness of the vocabulary while the model works with the unprecedentde entity vocabulary that 
 >      had not learned in the traing;
 
->    2) the global representation in the bi-LSTM encoding layer could not accurately handle the recognition of the >      entities in natuaral language.
+>    2) the global representation in the bi-LSTM encoding layer could not accurately handle the recognition of the 
+>      entities in natuaral language.
