--- a/_posts/2019-07-07-Week-6.md
+++ b/_posts/2019-07-07-Week-6.md
@@ -170,7 +170,9 @@ Matt et al. associate word embedding with EMD to measure document distance. The 
 
 (1) The WMD algorithm uses NBOW (normalized bag-of-words, the normalized word bag model) to represent the distribution P. Where P1 represents the word itself, used to calculate the weight of the word in the current document, wherein the word i appears several times in the associated document, and the feature quantity of P1 is represented by the word vector of the word.
 
-(2) The WMD algorithm uses a Word travel cost to calculate the similarity of the word i to the word j, that is, the Euclidean distance of the word vector of the word i and the word j, and the distance value is C(i,j)=|(vecI -vecJ)|. Here, C(i,j) is seen as the price paid for converting the word i into the word j.
+(2) The WMD algorithm uses a Word travel cost to calculate the similarity of the word i to the word j, that is, the Euclidean distance of the word vector of the word i and the word j, and the distance value is
+>    C(i,j)=|(vecI -vecJ)|. 
+>   Here, C(i,j) is seen as the price paid for converting the word i into the word j.
 
 (3) The WMD algorithm uses the Document distance to represent the distance between documents.
 
