--- a/_posts/2019-07-07-Week-6.md
+++ b/_posts/2019-07-07-Week-6.md
@@ -240,7 +240,7 @@ When looking into the two lists of scores that compared the similarity between t
 And, according to [a tutorial from Stanford](http://infolab.stanford.edu/~ullman/mmds/ch9.pdf) [1],
 >    When utilities are more detailed ratings, the Jaccard distance loses important information.
 
-Because Jaccard is mainly used to judge the similarity between sets, he can't reflect more information like a matrix. A simple example might be, when I make a movie recommendation, I use the data of the user to calculate the similarity between the movies. With Jaccard, I can only use the information "whether I have seen it", but in Cosine's calculation, Add the user's rating information for the movie.
+Because Jaccard is mainly used to judge the similarity between sets, he can't reflect more information like a matrix. A simple example might be, when I make a movie recommendation, I use the data of the user to calculate the similarity between the movies. With Jaccard, I can only use a single feature of the score that a watcher feedbacked, but in Cosine's calculation, it can add every feature of the watcher's rating information for the movie.
 
 To sum up,
 >   The Cosine similarity could be used to identify plagiarism, but will not be a good index to identify mirror sites on the internet. Whereas the Jaccard similarity will be a good index to identify mirror sites, but not so great at catching copy pasta plagiarism (within a larger document). [2]
