--- a/_posts/2019-06-23-Week-4.md
+++ b/_posts/2019-06-23-Week-4.md
@@ -49,7 +49,7 @@ Syntactic analysis is a very important part of analyzing sentences, including co
 
 Let's take an exemple, the constituency parse tree breaks a text into sub-phrases. Non-terminals in the tree are types of phrases, the terminals are the words in the sentence, and the edges are unlabeled. For a simple sentence "John sees Bill", a constituency parse would be: 
 
-![constituency_parse_tree](https://pic3.zhimg.com/80/v2-448af772ea31d990d0f0b5414e6b1afa_hd.jpg)
+![constituency_parse_tree](https://res.cloudinary.com/stuarteec/image/upload/v1563699690/v2-448af772ea31d990d0f0b5414e6b1afa_hd_gmbqed.jpg)
 
 It might do better in matching the relation between the pair(Object, Verb, Subject). However, it distract the focus from the importance of pairing the pair(Object + Property). So, I stll think dependency parsing is more pertinent to our problem in this aspect.
 
