--- a/_posts/2019-06-30-Week-5.md
+++ b/_posts/2019-06-30-Week-5.md
@@ -101,7 +101,7 @@ Summing Up:
 
 I got some feedback from the researches in NL2SQL that major in deploying reinforcement learning method in training the neural model to get more and more correctness in the returned answers.
 
-![Figure 1, SEQ2SQL(V Zhong et al.)](https://pbs.twimg.com/media/D-ljAtsUcAAqQ4Y.jpg)
+![Figure 1, SEQ2SQL(V Zhong et al.)](https://res.cloudinary.com/stuarteec/image/upload/v1563698435/D-ljAtsUcAAqQ4Y_jpmsgf.jpg)
 Figure 1, SEQ2SQL(V Zhong et al.) [1]
 
 To elaborate on this direction of researches, the paper MAPO (Memory Augmented Policy Optimization for Program Synthesis and Semantic Parsing) [2] on NIPS 2018 is worthy of our attention.
@@ -116,11 +116,12 @@ Since our task is to generate program statements, we can easily run the generate
 
 Based on the above-mentioned intensive learning ideas, in the specific implementation, MAPO proposed the following innovative solutions. First, in order to improve the efficiency of training, the MAPO algorithm stores the sampled high-reward program into a Memory Buffer. When training the strategy function fitting network, the objective function that maximizes the expected return is divided into two parts, one is The expected return of the sampling program in the Memory Buffer, and the other part is the expected return of the sampling program outside the Buffer, as shown in the following figure.
 
-![MAPO,NIPS2018](https://pbs.twimg.com/media/D-luC0sVAAEQ9i_.png)
+![MAPO,NIPS2018](https://res.cloudinary.com/stuarteec/image/upload/v1563697922/D-luC0sVAAEQ9i__nk6wcd.png)
+
 Figure 2, MAPO(NIPS 2018) [2]
 
 The team[2] applied MAPO to the [WikiSQL dataset](https://github.com/salesforce/WikiSQL). For each sample on the WikiSQL data, 1000 sample programs were generated. Five high-return samples were stored in the Memory Buffer. The [GloVe embeddings](https://nlp.stanford.edu/projects/glove/) was applied to the strategy function fitting network. LSTM Hidden The unit is 200 and the training is 15000 steps:
-![Figure 3, is the figure 2 from MAPO about its performances and experiments](https://pbs.twimg.com/media/D-lxATuU4AA29Sy.png)
+![Figure 3, is the figure 2 from MAPO about its performances and experiments](https://res.cloudinary.com/stuarteec/image/upload/v1563697030/MAPO.figure2_tpwugh.png)
 
 The learning of the connection between the the natural language question and the structured query is the major objective function, where the task is designed to let the query fit as much as possible during the machine translation training. 
 
