--- a/_posts/2019-07-20-Week-8.md
+++ b/_posts/2019-07-20-Week-8.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Week 6
+title:      Week 8
 subtitle:   Vector Similarity Calculation 
 date:       2019-07-07
 author:     Stuart Chen
@@ -14,13 +14,50 @@ tags:
 ---
 
 
-# The Week  6
+# The Tables 
 
-This week we focus on two aspects.
+## The Scores For The Answers
 
-First is the selection of the method for calculating the semantic vectors similarity.
+|Method |BLEU score| Micro F1 |Micro Precision |Micro Recall| Macro F1 |Macro Precision|Macro Recall|
+|:----- | :----: | :----: | :----: | :----: | :----: | :----: | :----: |
+| DBNQA | 64.55 | 0.0072 | 0.0274 | 0.0041 | 0.0093 |0.0093|0.0093|
+| QALD7 | 80 | 0.0072 | 0.0282 | 0.0041 | 0.0093 |0.0093|0.0093|
+| dependency parsing + Spotlight | 80 | 0.0037 | 0.0179 | 0.0021 | 0.0047 |0.0047|0.0047|
+| dependency parsing + Spotlight + GloVe | 80 | 0.0072 | 0.027 | 0.0041 | 0.0093 |0.0093|0.0093|
 
-Second is the experiment of doing benchmark evaluation in GERBIL-QA.
+
+## The Scores For The Answer Type
+
+
+|Method |BLEU score| Micro F1 |Micro Precision |Micro Recall| Macro F1 |Macro Precision|Macro Recall|
+|:----- | :----: | :----: | :----: | :----: | :----: | :----: | :----: |
+| DBNQA |64.55|0.6587|0.9167|0.514|0.5163|0.5163|0.5163|
+| QALD7 | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163	|
+| dependency parsing + Spotlight | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163|
+| dependency parsing + Spotlight + GloVe | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163|
+
+
+
+
+
+
+
+
+
+
+|Method|DBQNA BLEU score|DBQNA F1 score|DBQNA Answer Type F1 score|QALD BLEU score|QALD F1 score|QALD Answer Type F1 score|
+| :-----| :----: | :----: | :----: | :----: | :----: |
+| NSpM | 64.55 | 0.0072 | 0.6587 | 80 | 0.0072 | 0.6587 |
+| dependency parsing + Spotlight | 单元格 | 单元格 | 单元格 | 单元格 | 单元格 | 单元格 |
+| dependency parsing + Spotlight + vector similarity | 单元格 | 单元格 | 单元格 | 单元格 | 单元格 | 单元格 |
+
+
+
+
+
+
+
+
 
 
 
@@ -30,7 +67,7 @@ Second is the experiment of doing benchmark evaluation in GERBIL-QA.
 
 Method 1: Cosine Similarity
 
-![Cosine Similarity](https://res.cloudinary.com/stuarteec/image/upload/v1563698534/1342750759_1439_bzka5a.jpg)
+![Cosine Similarity](https://img-my.csdn.net/uploads/201207/20/1342750759_1439.jpg)
 
 ```python
 def cosine_distance(v1, v2): 
@@ -147,7 +184,7 @@ Method 11: Jaccard similarity coefficient
 
 The Jaccard index, also known as Intersection over Union and the Jaccard similarity coefficient (originally given the French name coefficient de communauté by Paul Jaccard), is a statistic used for gauging the similarity and diversity of sample sets. If A and B are both empty, we define J(A,B) = 1.
 
-![Jaccar](https://res.cloudinary.com/stuarteec/image/upload/v1563698591/20180119093515865_zsct8v.png)
+![Jaccar](https://img-blog.csdn.net/20180119093515865?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvdTAxMjgzNjM1NA==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
 ```python
 def jaccard_similarity_coefficient_distance(v1, v2):  
@@ -176,7 +213,7 @@ Matt et al. associate word embedding with EMD to measure document distance. The 
 
 (3) The WMD algorithm uses the Document distance to represent the distance between documents.
 
-![WMD](https://res.cloudinary.com/stuarteec/image/upload/v1563698635/20171114141354849_clmc1u.jpg)
+![WMD](https://img-blog.csdn.net/20171114141354849?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvcXJsaGw=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
 Define the matrix T here. Where Tij (Tij > = 0) indicates how much of the word i in the d document is converted into the word j in the d' document. In order to ensure that the document d can be converted into the document d', it is necessary to ensure that the sum of the quantities of all the words in the word d converted to d' is di, that is, the same reason, it should also satisfy the word j converted into the d' document in the d document. The total amount is dj, ie. We can define the distance between document d and d' as the minimum cost of converting all words in d into words in d'.
 
@@ -220,7 +257,7 @@ Method |  Accuracy
 Cosine Similarity |  53%
 Jaccard Similarity |  4%
 
---------------------- 
+---------------------
 * Analyses of The Result
 Let's take an example:
 we used the natural language pair <"wife", "Obama"> with expectation to get the entity pair <dbo:spouse, dbr:Barack_Obama>. 
