--- a/_posts/2019-07-20-Week-8.md
+++ b/_posts/2019-07-20-Week-8.md
@@ -18,16 +18,21 @@ tags:
 
 ## The Scores For The Answers
 
+This is the table for GERBIL evaluation.
+
 |Method |BLEU score| Micro F1 |Micro Precision |Micro Recall| Macro F1 |Macro Precision|Macro Recall|
 |:----- | :----: | :----: | :----: | :----: | :----: | :----: | :----: |
 | DBNQA | 64.55 | 0.0072 | 0.0274 | 0.0041 | 0.0093 |0.0093|0.0093|
 | QALD7 | 80 | 0.0072 | 0.0282 | 0.0041 | 0.0093 |0.0093|0.0093|
 | dependency parsing + Spotlight | 80 | 0.0037 | 0.0179 | 0.0021 | 0.0047 |0.0047|0.0047|
 | dependency parsing + Spotlight + GloVe | 80 | 0.0072 | 0.027 | 0.0041 | 0.0093 |0.0093|0.0093|
+
 ------------------------------------------------------------------------------------------------
 
 
 ## The Scores For The Answer Type
+
+This table shows the statistics for answer types evaluation.
 
 |Method |BLEU score| Micro F1 |Micro Precision |Micro Recall| Macro F1 |Macro Precision|Macro Recall|
 |:----- | :----: | :----: | :----: | :----: | :----: | :----: | :----: |
@@ -35,6 +40,7 @@ tags:
 | QALD7 | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163	|
 | dependency parsing + Spotlight | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163|
 | dependency parsing + Spotlight + GloVe | 80 | 0.6587|0.9167|0.514|0.5163|0.5163|0.5163|
+
 ----------------------------------------------------------------------------------------
 
 
