--- a/_posts/2019-08-03-Week-9and10.md
+++ b/_posts/2019-08-03-Week-9and10.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Week 9-10
+title:      Week 9and10
 subtitle:   Univerasal Sentence Encoder for Template Matching & Templates Bank 
 date:       2019-08-03
 author:     Stuart Chen
