--- a/_posts/2019-07-20-Week-7&8.md
+++ b/_posts/2019-07-20-Week-7&8.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Week 8
+title:      Week 7&8
 subtitle:   Analyses for Previous Works 
 date:       2019-07-19
 author:     Stuart Chen
