UPDATE THE DETAILS

--- a/_posts/2019-08-03-Week-9&10.md
+++ b/_posts/2019-08-03-Week-9&10.md
@@ -28,6 +28,20 @@ We focus on:
 
 ### 1.1 Universal Sentence Encoder
 
+Why we need it?
+
+Considering the great human efforts we have expended in manually composing the templates, we believe we can make better use of them for generating more new templates,
+
+* for example, when we see these two questions,
+
+`who is the wife of Obama?` and `who is the spouse of Obama?`
+
+actually, they can be represented by the same query for the same semantic meaning.
+
+Then, how to accomplish the semantic searching?
+
+Yes, we can use the similarity of embedding vectors by the Universal Sentence Encoder.
+
 The [Universal Sentence Encoder](https://arxiv.org/abs/1803.11175) [1] encodes text into vectors of high dimensions that can be used in classifying documents, calculating semantic similarity, topics clustering, and more other natural language processing tasks. With [Tensorflow-hub](https://tfhub.dev/google/universal-sentence-encoder), we deploy the Universal Sentence Encoder to calculate the similarity between the new question and the existing templates to do the matching task. 
 
 The encoder part comes with two variant options, one with [Transformer](https://arxiv.org/abs/1706.03762) [2] encoder and the other with [Deep Averaging Network](http://cs.umd.edu/~miyyer/pubs/2015_acl_dan.pdf) (DAN) [3]. Both having a necessity for precision and computational resource trading, while the one with the Transformer encoder is of higher accuracy at a cost of computing, it is more intensive in computational terms. And, the other with DNA encoding is less costly computationally but with less precision.
@@ -57,6 +71,12 @@ Trainable params: 263,169
 Non-trainable params: 0
 __________________________________________________________________________________________________
 ```
+
+So, if we compare `who is the wife of Obama?` and `who is the spouse of Obama?`, they would be classified into the same semantic meaning by setting the threshold similarity score. 
+
+However, when we faced `who is the father of Obama?` and `who is the spouse of Obama?`, the difference will be shown in the similarity score. If the threshold is lower than what's required, we call the template composing function then. 
+
+<br>
 
 ### 1.2 Preprocesing
 
@@ -114,7 +134,11 @@ with three upper Classes,
 
 and the Spotlight can also indicate the most probable Class in this context is the "dbo:Person" in the return. So, to know to which Class it belongs, we can respectively fetch their lists of properties that its three upper Classes have,  and see in which list of properties the predicate exists.
 
+<br>
+
 ### 1.4  Semantic Searching
+
+How do we use the Universal Sentence Encoder to build the Semantic Searching?
 
 Given the detected Class and its belonging templateset, we can use the similarity searching function to get the matched template for the question:
 
