--- a/_posts/2019-08-18-Week-11&12.md
+++ b/_posts/2019-08-18-Week-11&12.md
@@ -85,6 +85,10 @@ This can clarify what the words or pronouns are talking about in the passage: to
 
 through the Coreference Resolution, we can figure out that `whom does it mean by 'his' ? ` in the context, which helps a lot in the RDF entities confirmation.
 
+Then we get the RDF:
+
+`'his' <dbr:Barack_Obama>` --> `'wife' <dbo:spouse>` --> `'Michelle' <dbr:Michelle_Obama>` 
+
 Resolution of coreference is a well-studied problem in computer linguistics discourse. To obtain the correct interpretation of a text, or even to assess the relative significance of the different topics listed above, pronouns and other reference phrases must be related to the right individuals. Usually, algorithms designed to solve coreferences first look for the closestpre.
 
 `Coreference Resolution in spaCy with Neural Networks.'
