--- a/_posts/2019-08-18-Week-11&12.md
+++ b/_posts/2019-08-18-Week-11&12.md
@@ -66,7 +66,7 @@ Then we calculate the average length of the sentences we get and set it as the t
 
 Let's see what is the coreference resolution.
 
-This's an explanative example[1](by StandfordNLP),
+This's an explanative example(by StandfordNLP) [1],
 
 ![Coreference Resolution](https://res.cloudinary.com/stuarteec/image/upload/v1567214556/corefexample.StandfordNLPpng_gpvkbs.png  "Coreference Resolution(by StandfordNLP)")
 
